--- a/MAB.ContextInspector/Views/ContextInspector/Index.cshtml
+++ b/MAB.ContextInspector/Views/ContextInspector/Index.cshtml
@@ -20,15 +20,16 @@
 
             body {
                 margin: 0;
-                padding: 0;
+                padding: 5px;
                 font-family: Helvetica, Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;
                 font-size: 14px;
             }
 
             table {
-                margin: 5px;
+                margin: 0;
                 border-collapse: collapse;
                 border-spacing: 0;
+                width: 100%;
             }
 
             td, th {
@@ -46,6 +47,16 @@
                 background-color: #b0c3ff;
             }
 
+            #col-key {
+                width: 25%;
+            }
+            #col-type {
+                width: 10%;
+            }
+            #col-contents {
+                width: 65%;
+            }
+            
             pre {
                 outline: none;
                 padding: 0;
@@ -72,7 +83,7 @@
                 color: #000000;
             }
 
-            .varkey {
+            .varkey, .vartype {
                 font-family: monospace;
             }
 
@@ -84,8 +95,43 @@
 
         </style>
     </head>
-    <body>
+<body>
+    @if (Model.CacheVariables.Count > 0)
+    {
         <table>
+            <colgroup>
+                <col id="col-key" />
+                <col id="col-type" />
+                <col id="col-contents" />
+            </colgroup>
+            <tr class="main">
+                <th colspan="3">Cache</th>
+            </tr>
+            <tr>
+                <th>Key</th>
+                <th>Type</th>
+                <th>Contents</th>
+            </tr>
+            @foreach (var variable in Model.CacheVariables)
+            {
+                var isObject = variable.Value.Item1 == "object";
+
+                <tr class="data">
+                    <th class="varkey">@variable.Key</th>
+                    <td class="vartype">@variable.Value.Item1</td>
+                    <td class="value">@variable.Value.Item2</td>
+                </tr>
+            }
+        </table>
+    }
+    @if (Model.ApplicationVariables.Count > 0)
+    {
+        <table>
+            <colgroup>
+                <col id="col-key" />
+                <col id="col-type" />
+                <col id="col-contents" />
+            </colgroup>
             <tr class="main">
                 <th colspan="3">Application</th>
             </tr>
@@ -100,12 +146,20 @@
 
                 <tr class="data">
                     <th class="varkey">@variable.Key</th>
-                    <td>@variable.Value.Item1</td>
+                    <td class="vartype">@variable.Value.Item1</td>
                     <td class="value">@variable.Value.Item2</td>
                 </tr>
             }
         </table>
+    }
+    @if (Model.SessionVariables.Count > 0)
+    {
         <table>
+            <colgroup>
+                <col id="col-key" />
+                <col id="col-type" />
+                <col id="col-contents" />
+            </colgroup>
             <tr class="main">
                 <th colspan="3">Session</th>
             </tr>
@@ -120,39 +174,41 @@
 
                 <tr class="data">
                     <th class="varkey">@variable.Key</th>
-                    <td>@variable.Value.Item1</td>
+                    <td class="vartype">@variable.Value.Item1</td>
                     <td class="value">@variable.Value.Item2</td>
                 </tr>
             }
         </table>
-        <script type="text/javascript">
-            function syntaxHighlight(json) {
-                if(json.indexOf('{') != -1)
-                    json = JSON.stringify(JSON.parse(json), undefined, 4);
+    }
+    <script type="text/javascript">
+        function syntaxHighlight(json) {
+            if (json.indexOf('{') != -1)
+                json = JSON.stringify(JSON.parse(json), undefined, 4);
 
-                json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
-                return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
-                    var cls = 'number';
-                    if (/^"/.test(match)) {
-                        if (/:$/.test(match)) {
-                            cls = 'key';
-                            match = match.replace(/\"/gi, '')
-                        } else {
-                            cls = 'string';
-                        }
-                    } else if (/true|false/.test(match)) {
-                        cls = 'boolean';
-                    } else if (/null/.test(match)) {
-                        cls = 'null';
+            json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
+            return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
+                var cls = 'number';
+                if (/^"/.test(match)) {
+                    if (/:$/.test(match)) {
+                        cls = 'key';
+                        match = match.replace(/\"/gi, '')
+                    } else {
+                        cls = 'string';
                     }
-                    return '<span class="' + cls + '">' + match + '</span>';
-                });
-            }
+                } else if (/true|false/.test(match)) {
+                    cls = 'boolean';
+                } else if (/null/.test(match)) {
+                    cls = 'null';
+                }
+                return '<span class="' + cls + '">' + match + '</span>';
+            });
+        }
 
-            var elements = document.getElementsByClassName('value');
-            for (var i = 0; i < elements.length; i++) {
-                elements[i].innerHTML = '<pre>' + syntaxHighlight(elements[i].innerHTML) + '</pre>';
-            }
-        </script>
-    </body>
+        var elements = document.getElementsByClassName('value');
+        for (var i = 0; i < elements.length; i++) {
+            elements[i].innerHTML = '<pre>' + syntaxHighlight(elements[i].innerHTML) + '</pre>';
+        }
+    </script>
+</body>
+
 </html>
