--- a/MAB.ContextInspector.TestHarness/Views/Shared/_Layout.cshtml
+++ b/MAB.ContextInspector.TestHarness/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script type="text/javascript" src="/scripts/mab.contextinspector.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
