--- a/MAB.ContextInspector/Views/ContextInspector/Index.cshtml
+++ b/MAB.ContextInspector/Views/ContextInspector/Index.cshtml
@@ -20,7 +20,7 @@
 
             body {
                 margin: 0;
-                padding: 5px;
+                padding: 0;
                 font-family: Helvetica, Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;
                 font-size: 14px;
             }
