--- a/MAB.ContextInspector/Views/ContextInspector/Index.cshtml
+++ b/MAB.ContextInspector/Views/ContextInspector/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model MAB.ContextInspector.Models.ContextInspectorViewModel
-
-@{
+﻿@{
     Layout = null;
 }
 
@@ -25,191 +23,12 @@
                 font-size: 12px;
             }
 
-            table {
-                margin: 0;
-                border-collapse: collapse;
-                border-spacing: 0;
-                width: 100%;
-            }
-
-            td, th {
-                border: 1px solid #ddd;
-                text-align: left;
-                vertical-align: top;
-                padding: 6px 30px 6px 10px;
-            }
-
-            tr.data:nth-child(even) {
-                background-color: #F5F5F5;
-            }
-
-            tr.data:hover {
-                background-color: #b0c3ff;
-            }
-
-            #col-key {
-                width: 25%;
-            }
-            #col-type {
-                width: 10%;
-            }
-            #col-contents {
-                width: 65%;
-            }
-            
-            pre {
-                outline: none;
-                padding: 0;
-                margin: 0;
-            }
-
-            .string {
-                color: green;
-            }
-
-            .number {
-                color: #a70000;
-            }
-
-            .boolean {
-                color: blue;
-            }
-
-            .null {
-                color: magenta;
-            }
-
-            .key {
-                color: #000000;
-            }
-
-            .varkey, .vartype {
-                font-family: monospace;
-            }
-
-            .main th {
-                background-color: #00487d;
-                border-color: #00487d;
-                color: #fff;
-            }
-
         </style>
+        @Styles.Render("~/bundles/mab.contextinspector.css")
     </head>
 <body>
-    @if (Model.CacheVariables.Count > 0)
-    {
-        <table>
-            <colgroup>
-                <col id="col-key" />
-                <col id="col-type" />
-                <col id="col-contents" />
-            </colgroup>
-            <tr class="main">
-                <th colspan="3">Cache</th>
-            </tr>
-            @*<tr>
-                <th>Key</th>
-                <th>Type</th>
-                <th>Contents</th>
-            </tr>*@
-            @foreach (var variable in Model.CacheVariables)
-            {
-                <tr class="data">
-                    <th class="varkey">@variable.Key</th>
-                    <td class="vartype"><a title="@variable.Value.FullTypeName">@variable.Value.ShortTypeName</a></td>
-                    <td class="value">@variable.Value.Item</td>
-                </tr>
-            }
-        </table>
-    }
-    @if (Model.ApplicationVariables.Count > 0)
-    {
-        <table>
-            <colgroup>
-                <col id="col-key" />
-                <col id="col-type" />
-                <col id="col-contents" />
-            </colgroup>
-            <tr class="main">
-                <th colspan="3">Application</th>
-            </tr>
-            @*<tr>
-                <th>Key</th>
-                <th>Type</th>
-                <th>Contents</th>
-            </tr>*@
-            @foreach (var variable in Model.ApplicationVariables)
-            {
-                <tr class="data">
-                    <th class="varkey">@variable.Key</th>
-                    <td class="vartype"><a title="@variable.Value.FullTypeName">@variable.Value.ShortTypeName</a></td>
-                    <td class="value">@variable.Value.Item</td>
-                </tr>
-            }
-        </table>
-    }
-    @if (Model.SessionVariables.Count > 0)
-    {
-        <table>
-            <colgroup>
-                <col id="col-key" />
-                <col id="col-type" />
-                <col id="col-contents" />
-            </colgroup>
-            <tr class="main">
-                <th colspan="3">Session</th>
-            </tr>
-            @*<tr>
-                <th>Key</th>
-                <th>Type</th>
-                <th>Contents</th>
-            </tr>*@
-            @foreach (var variable in Model.SessionVariables)
-            {
-                <tr class="data">
-                    <th class="varkey">@variable.Key</th>
-                    <td class="vartype"><a title="@variable.Value.FullTypeName">@variable.Value.ShortTypeName</a></td>
-                    <td class="value">@variable.Value.Item</td>
-                </tr>
-            }
-        </table>
-    }
-    <script type="text/javascript">
-        var MAB = {
-            ContextInspector: {
-                syntaxHighlight: function (json) {
-                    if (json.indexOf('{') != -1)
-                        json = JSON.stringify(JSON.parse(json), undefined, 4);
-
-                    json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
-                    return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
-                        var cls = 'number';
-                        if (/^"/.test(match)) {
-                            if (/:$/.test(match)) {
-                                cls = 'key';
-                                match = match.replace(/\"/gi, '')
-                            } else {
-                                cls = 'string';
-                            }
-                        } else if (/true|false/.test(match)) {
-                            cls = 'boolean';
-                        } else if (/null/.test(match)) {
-                            cls = 'null';
-                        }
-                        return '<span class="' + cls + '">' + match + '</span>';
-                    });
-                },
-                init: function () {
-                    var elements = document.getElementsByClassName('value');
-                    for (var i = 0; i < elements.length; i++) {
-                        elements[i].innerHTML = '<pre>' + MAB.ContextInspector.syntaxHighlight(elements[i].innerHTML) + '</pre>';
-                    }
-                }
-            }
-        };
-
-        MAB.ContextInspector.init();
-    </script>
+    @{ Html.RenderAction("Data"); }
+    @Scripts.Render("~/bundles/mab.contextinspector.js")
 </body>
 
 </html>
