Fix standalone view

--- a/MAB.ContextInspector/Views/ContextInspector/Index.cshtml
+++ b/MAB.ContextInspector/Views/ContextInspector/Index.cshtml
@@ -28,6 +28,9 @@
     </head>
 <body>
     @{ Html.RenderAction("Data"); }
+    <script type="text/javascript">
+        var _CI_STANDALONE = true;
+    </script>
     @Scripts.Render("~/bundles/mab.contextinspector.js")
 </body>
 
