--- a/MAB.ContextInspector/Content/mab.contextinspector.css
+++ b/MAB.ContextInspector/Content/mab.contextinspector.css
@@ -1,9 +1,16 @@
 ﻿#mab-contextinspector {
+    font-family: Helvetica, Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;
+    font-size: 12px;
+    line-height: 1em;
+}
+
+#mab-contextinspector.inspector {
     position: absolute; 
     width: 100%; 
     height: 550px; 
     left: 0; 
     bottom: 0; 
+    
     background-color: #fff; 
     border-top: solid 1px #000;
     x-display: none;
@@ -31,70 +38,77 @@
     bottom: 550px;
 }
 
-table {
-                margin: 0;
-                border-collapse: collapse;
-                border-spacing: 0;
-                width: 100%;
-            }
+#mab-contextinspector table {
+    margin: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+}
 
-            td, th {
-                border: 1px solid #ddd;
-                text-align: left;
-                vertical-align: top;
-                padding: 6px 30px 6px 10px;
-            }
+#mab-contextinspector td, th {
+    border: 1px solid #ddd;
+    text-align: left;
+    vertical-align: top;
+    padding: 6px 30px 6px 10px;
+}
 
-            tr.data:nth-child(even) {
-                background-color: #F5F5F5;
-            }
+#mab-contextinspector tr.data:nth-child(even) {
+    background-color: #F5F5F5;
+}
 
-            tr.data:hover {
-                background-color: #b0c3ff;
-            }
+#mab-contextinspector tr.data:hover {
+    background-color: #b0c3ff;
+}
 
-            #col-key {
-                width: 25%;
-            }
-            #col-type {
-                width: 10%;
-            }
-            #col-contents {
-                width: 65%;
-            }
+#mab-contextinspector #col-key {
+    width: 25%;
+}
+
+#mab-contextinspector #col-type {
+    width: 10%;
+}
+
+#mab-contextinspector #col-contents {
+    width: 65%;
+}
             
-            pre {
-                outline: none;
-                padding: 0;
-                margin: 0;
-            }
+#mab-contextinspector pre {
+    outline: none;
+    padding: 0;
+    margin: 0;
+    font-size: 12px;
+    border: none;
+    line-height: 1em;
+    border-radius: 0;
+    overflow: visible;
+}
 
-            .string {
-                color: green;
-            }
+#mab-contextinspector .string {
+    color: green;
+}
 
-            .number {
-                color: #a70000;
-            }
+#mab-contextinspector .number {
+    color: #a70000;
+}
 
-            .boolean {
-                color: blue;
-            }
+#mab-contextinspector .boolean {
+    color: blue;
+}
 
-            .null {
-                color: magenta;
-            }
+#mab-contextinspector .null {
+    color: magenta;
+}
 
-            .key {
-                color: #000000;
-            }
+#mab-contextinspector .key {
+    color: #000000;
+}
 
-            .varkey, .vartype {
-                font-family: monospace;
-            }
+#mab-contextinspector .varkey, .vartype {
+    font-family: monospace;
+}
 
-            .main th {
-                background-color: #00487d;
-                border-color: #00487d;
-                color: #fff;
-            }
+#mab-contextinspector .main th {
+    background-color: #00487d;
+    border-color: #00487d;
+    color: #fff;
+}
